footer and drawing tool added
Adding prototype and footer to work and drawing tool pages

--- a/drawing.html
+++ b/drawing.html
@@ -19,6 +19,7 @@
   <script src="js/vendor/p5.min.js" charset="utf-8"></script>
   <script src="js/vendor/p5.dom.js" charset="utf-8"></script>
   <script src="js/sketch.js"charset="utf-8"></script>
+  <script src="js/app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -35,11 +36,18 @@
         <a href="https://jennamurphymcad.github.io/Capstone-Page/">Capstone Project Page</a>
       </div>
     </div>
+
   </header>
 
   <main id="main">
-
+    <!-- <h1>Drawing Tool Prototype</h1> -->
+    <div id='menu' class='container'></div>
+    <div id='main-sketch' class='container'></div>
   </main>
+
+  <footer>
+    <p>Jenna Murphy | MCAD MAGWD | Fall 2020</p>
+  </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
