--- a/work.html
+++ b/work.html
@@ -40,6 +40,9 @@
 
   <main id="main">
   </main>
+  <footer>
+    <p>Jenna Murphy | MCAD MAGWD | Fall 2020</p>
+  </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
