--- a/work.html
+++ b/work.html
@@ -35,10 +35,23 @@
       <a href="https://jennamurphymcad.github.io/Capstone-Page/">Capstone Project Page</a>
     </div>
   </div>
-
+  <div class="hero-image">
+    <div class="hero-text">
+    </div>
+  </div>
 </header>
 
   <main id="main">
+    <section class="left40">
+        <img src="img/placeholder.jpg" alt="placeholder">
+    </section>
+    <section class="no-float">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id urna accumsan, dapibus felis et, sagittis sem. Praesent tempus, lacus non ultricies ultricies, est est volutpat lacus, et efficitur nisl purus in sem. Curabitur odio neque, porttitor eget lorem eget, malesuada accumsan elit. Nam vel ipsum lobortis, ornare elit tincidunt, volutpat augue. Donec commodo posuere auctor. Nulla tincidunt tincidunt tellus, vitae molestie urna ornare sed. Sed turpis augue, ultricies nec maximus vitae, interdum ultrices nisi. Phasellus venenatis magna nec leo accumsan, a bibendum felis posuere.</p>
+
+      <p>Aliquam vel scelerisque metus. Duis sodales fringilla orci nec accumsan. Mauris volutpat turpis a vehicula sollicitudin. Maecenas sit amet quam et nulla suscipit tristique nec quis velit. Curabitur arcu nibh, efficitur nec justo at, accumsan elementum sem. Morbi quis ante vitae leo ultrices congue. Vivamus sed ultrices eros. Sed feugiat dictum auctor. Fusce ultricies ligula at mattis dapibus. Morbi vehicula, est in tempor eleifend, tortor neque venenatis justo, in ornare nulla orci vel nulla. Aenean eu ante blandit, congue lorem ac, tincidunt mauris. Morbi ac ligula ligula. Etiam ante elit, efficitur eget est quis, condimentum ultricies nibh. Nam egestas auctor nisi, ac posuere lectus placerat non. Aliquam in quam tristique, congue urna sed, blandit purus.</p>
+    <section>
   </main>
   <footer>
     <p>Jenna Murphy | MCAD MAGWD | Fall 2020</p>
