--- a/work.html
+++ b/work.html
@@ -18,7 +18,7 @@
   <!-- Place favicon.ico in the root directory -->
   <script src="js/vendor/p5.min.js" charset="utf-8"></script>
   <script src="js/vendor/p5.dom.js" charset="utf-8"></script>
-  <script src="js/sketch.js"charset="utf-8"></script>
+  <!-- <script src="js/sketch.js"charset="utf-8"></script> -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -27,14 +27,11 @@
 
 <body>
   <header>
-  <div class="topnav">
-    <a  href="index.html"><b>Discover a Space Between</b></a>
-    <a href="drawing.html">Drawing Tool</a>
-    <a class="active" href="work.html">About the Work</a>
-    <div class="topnav-right">
-      <a href="https://jennamurphymcad.github.io/Capstone-Page/">Capstone Project Page</a>
-    </div>
-  </div>
+    <div class="grid-containerNav" id='TopNav'>
+        <a class="nav1" id='Nav1' href="index.html"><b>Discover a Space Between</b></a>
+        <a class="nav2" id='Nav2' href="drawing.html">Drawing Tool</a>
+        <a class="active nav3" id='Nav3' href="work.html">About the Work</a>
+      </div>
   <div class="hero-image">
     <div class="hero-text">
     </div>
