--- a/drawing.html
+++ b/drawing.html
@@ -36,7 +36,7 @@
 
   </header>
 
-  <main class="grid-containerDT" id='mainDTBody'>
+  <div class="grid-containerDT" id='mainDTBody'>
     <!-- <h1 class="header"></h1> -->
           <!-- <div id='top' class='container'></div> -->
           <div class="grid-container2" id='menu' class='container'>
@@ -44,29 +44,30 @@
             <div class="menudiv2" id="ForLoop"></div>
             <div class="menudiv3" id="QV1">
               <input type="checkbox" id="box1">
-              Random Shape Highlighter
+              Random Color Highlighter
             </input>
             </div>
             <div class="menudiv4" id="QV2">
                 <input type="checkbox" id="box2">
-                Random Shape Highlighter
+                Random Color Highlighter
               </input>
               </div>
             <div class="menudiv5" id="QV3">
               <input type="checkbox" id="box3">
-              Random Shape Highlighter
+              Random Color Highlighter
             </input>
             </div>
             <div class="menudiv6" id="transform"></div>
             <div class="menudiv7" id="save"></div>
           </div>
           <div class="main" id='main' class='container'>
-          <div id='canvas'></div></div>
+          <div id='canvas'></div>
+        </div>
           <!-- <section id='album'>
             <h1>Photo Album Viewer</h1>
             <div id="viewer" />
         </section> -->
-  </main>
+  </div>
 
   <!-- <footer>
     <p>Jenna Murphy | MCAD MAGWD | Fall 2020</p>
