--- a/index.html
+++ b/index.html
@@ -77,14 +77,20 @@
 
   <div class="mySlides fade center">
     <div class="numbertext">3 / 5</div>
-    <img src="img/app11.jpg" >
+    <img src="img/MERIDIAN.jpg" >
     <div class="text">Meridian</div>
   </div>
 
   <div class="mySlides fade center">
     <div class="numbertext">4 / 5</div>
-    <img src="img/drawingtool2 copy.jpg" >
+    <img src="img/DISCOVERY1.0.jpg" >
     <div class="text">Discover 1.0</div>
+  </div>
+
+  <div class="mySlides fade center">
+    <div class="numbertext">4 / 5</div>
+    <img src="img/DISCOVERY2.0.jpg" >
+    <div class="text">Discover 2.0</div>
   </div>
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
