Remove Grid format add all copy

--- a/drawing.html
+++ b/drawing.html
@@ -39,7 +39,7 @@
   <div class="grid-containerDT" id='mainDTBody'>
     <!-- <h1 class="header"></h1> -->
           <!-- <div id='top' class='container'></div> -->
-          <div class="grid-container2" id='menu' class='container'>
+          <div class="grid-container2 text-box text-box-shadow" id='menu' class='container'>
             <div class="menudiv1" id="backgroundColor"></div>
             <div class="menudiv2" id="ForLoop"></div>
             <div class="menudiv3" id="QV1">
@@ -59,6 +59,7 @@
             </div>
             <div class="menudiv6" id="transform"></div>
             <div class="menudiv7" id="save"></div>
+            <!-- <div class="shadows" aria-hidden="true"></div> -->
           </div>
           <div class="main" id='main' class='container'>
           <div id='canvas'></div>
