--- a/index.html
+++ b/index.html
@@ -36,17 +36,81 @@
         <a class="nav2" id='Nav2' href="drawing.html">Drawing Tool</a>
         <a class="nav3" id='Nav3' href="work.html">About the Work</a>
       </div>
+
+      <div class="hero">
+        <div class="hero-image">
+          <div class="hero-text">
+          </div>
+        </div>
+      </div>
+
   </header>
 
-  <main class="grid-containerHOME" id="hero" >
+  <!-- <main class="grid-containerHOME" id="hero" >
     <div class="gridHome1">
       <div class="hero-image">
         <div class="hero-text">
         </div>
       </div>
-    </div>
+    </div> -->
+    <main id="main" style="clear:both;">
 
-    <div class="grid-spacer">    </div>
+
+      <section id="summary">
+        <!-- <h3 class="background">Problem Statement</h3> -->
+
+        <p>Jenna Murphy, Minneapolis based artist, has been exploring what a contemporary drawing can be in today’s digital age. With a background in Intaglio Printmaking and Drawing, Jenna’s Computational Drawings aim to discover similar tactile qualities through computer code generated images using the software p5.js. The work aims to push the boundary of what a contemporary drawing can be, while endeavoring to blur the lines between the constructs of Fine and Digital Arts.</p>
+
+        <!-- <img src="img/placeholder.jpg" alt="Exhibition Images" style="max-width: 100%";> -->
+
+        <p>The exhibition, Discover a Space Between, explores the intersection between physical and digital spaces, while showcasing the computational drawings of Jenna Murphy. The Drawing Tool, born out of the work, is an integral component of the exhibition. The Drawing Tool is a web-based digital companion piece that allows users to explore the beauty of computational drawings on their own. The Drawing Tool can be accessed online or in person, allowing for accessibility during times when physical presence may not be possible.</p>
+
+        <div class="slideshow-container" id="slide">
+
+          <!-- Full-width images with number and caption text -->
+          <div class="mySlides fade center">
+            <div class="numbertext" style="border: none">1 / 5</div>
+            <img src="img/axis copy.jpg" >
+            <div class="text" style="border: none"><p><i>Axis</i></p>
+        <p>Computational Drawing, Archival Inkjet on Cotton Rag Paper</p>
+        <p>14” x 14”</p>
+        </div>
+          </div>
+
+          <div class="mySlides fade center">
+            <div class="numbertext" style="border: none">2 / 5</div>
+            <img src="img/app9 copy.jpg" >
+            <div class="text" style="border: none">Encounter</div>
+          </div>
+
+          <div class="mySlides fade center">
+            <div class="numbertext" style="border: none">3 / 5</div>
+            <img src="img/app11.jpg" >
+            <div class="text" style="border: none">Meridian</div>
+          </div>
+
+          <div class="mySlides fade center">
+            <div class="numbertext" style="border: none">4 / 5</div>
+            <img src="img/drawingtool2.jpg" >
+            <div class="text" style="border: none">Discover 1.0</div>
+          </div>
+
+          <div class="mySlides fade center">
+            <div class="numbertext" style="color:white; border: none">4 / 5</div>
+            <img src="img/index.jpg" >
+            <div class="text" style="border: none">Discover 2.0</div>
+          </div>
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          </div>
+
+        <p>The physical pieces presented in Discover a Space Between are works created during the development of the Drawing Tool. Each piece builds off the last, while exploring ways to make the tool itself more complex and engaging. The changes and order of the works are outlined in the Change Log found on the About the Work page.</p>
+
+        <p>Take a moment to read about each piece, and then explore the Drawing Tool yourself. The hope is that you may find many beautiful discoveries of your own.</p>
+      </section>
+
+    <!-- <div class="grid-spacer">    </div>
       <div class="gridHome2" id="summary">
         <p>Jenna Murphy, Minneapolis based artist, has been exploring what a contemporary drawing can be in today’s digital age. With a background in Intaglio Printmaking and Drawing, Jenna’s Computational Drawings aims to discover similar tactile qualities through computer code generated images. This work aims to push the boundary of what a contemporary drawing can be, while endeavoring to blur the lines between the constructs of Fine and Digital Arts.
 </p>
@@ -54,58 +118,20 @@
 
     <div class="gridHome3" id="exhibitionShot2">
       <img src="img/placeholder.jpg" alt="placeholder">
-    </div>
+    </div> -->
 
     <!-- Slideshow container -->
-<div class="gridHome4 slideshow-container" id="slide">
 
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade center">
-    <div class="numbertext">1 / 5</div>
-    <img src="img/axis copy.jpg" >
-    <div class="text" style="border: none"><p><i>Axis</i></p>
-<p>Computational Drawing, Archival Inkjet on Cotton Rag Paper</p>
-<p>14” x 14”</p>
-</div>
-  </div>
-
-  <div class="mySlides fade center">
-    <div class="numbertext">2 / 5</div>
-    <img src="img/app9 copy.jpg" >
-    <div class="text">Encounter</div>
-  </div>
-
-  <div class="mySlides fade center">
-    <div class="numbertext">3 / 5</div>
-    <img src="img/MERIDIAN.jpg" >
-    <div class="text">Meridian</div>
-  </div>
-
-  <div class="mySlides fade center">
-    <div class="numbertext">4 / 5</div>
-    <img src="img/DISCOVERY1.0.jpg" >
-    <div class="text">Discover 1.0</div>
-  </div>
-
-  <div class="mySlides fade center">
-    <div class="numbertext">4 / 5</div>
-    <img src="img/DISCOVERY2.0.jpg" >
-    <div class="text">Discover 2.0</div>
-  </div>
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
 
 <!-- <div class="gridHome5" id="ExhibitionShot3">
     <img src="img/placeholder.jpg" alt="placeholder">
 </div> -->
-<div class="gridHome6" id="">
+<!-- <div class="gridHome6" id="">
     <p>Following a degree in Studio Arts at Hamline University, Jenna went on to study Interactive Design at MCAD. It was during this time that Jenna was first introduced to p5.js, a client-side JavaScript library. P5.js helped facilitate an experimental interaction with the computer, allowing Jenna the freedom to move away from traditional subject matter and explore abstract shapes and concepts.</p>
     <p>Through iteration, the shapes multiply, shift and move across the piece. Continued experimentation reveals a balanced composition; one of an infinite number just waiting to be found.</p>
     <p>The works created in the installation, Discover a Space Between were born out of the creation of the Drawing Tool. Each drawing builds off the last, while exploring in ways to make the tool itself more complex. </p>
     <p>The installation as a whole is in search of exploring how digital companion pieces that are included online with the Exhibition page can generate and expose new audiences to galleries and artists work. </p>
-</div>
+</div> -->
 <!-- The dots/circles -->
 <!-- <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span>
