--- a/work.html
+++ b/work.html
@@ -32,27 +32,86 @@
         <a class="nav2" id='Nav2' href="drawing.html">Drawing Tool</a>
         <a class="active nav3" id='Nav3' href="work.html">About the Work</a>
       </div>
-  <div class="hero-image">
+  <div class="hero-image2">
     <div class="hero-text">
     </div>
   </div>
 </header>
 
-  <main id="main">
-    <section class="left40">
+  <!-- <div class="grid-containerWORK" id="mainWORK"> -->
+    <!-- <div class="left40">
         <img src="img/placeholder.jpg" alt="placeholder">
+    </div> -->
+    <!-- <div class="gridWork1" id="">
+        <img src="img/app9.jpg" alt="app9" style="width:150px">
+    </div> -->
+    <!-- <div class="gridWork2" id="log"> -->
+    <main id="main" style="clear:both;">
+      <!-- <\\> -->
+      <section>
+        <p>Since its onset, the computer has allowed for precise and efficient calculations. Through its efficient nature, the computer also allowed for a reduction in time to create complex, repetitive compositions.<sup>1</sup> This ability, as stated in Form + Code, “was often the motivation for the early adoption of software and its integration into the creative process.”<sup>2</sup>  The time saved by the computers’ work allows for more freedom and time to explore.<sup>3</sup> As Michael Noll puts it, the computer becomes, “an intellectual and active creative partner that, when fully exploited, could be used to produce wholly new art forms and possibly new aesthetic experiences.”<sup>4</sup></p>
+
+<p>Following a degree in Studio Arts at Hamline University, Jenna went on to study Interactive Design at MCAD. It was during this time that Jenna was first introduced to p5.js, a client-side JavaScript library. P5.js helped facilitate an experimental interaction with the computer, allowing Jenna the freedom to move away from traditional subject matter and explore abstract shapes and concepts.</p>
+
+<p>This body of work has given way to the development of the Drawing Tool. While building the Drawing Tool, there were a number of steps and significant breakthroughs along the way. Each work featured in the exhibition, <i>Discover a Space Between</i>, has a role in the development and creation of the Drawing Tool. The Discovery Log found below outlines the order sequence and the significance of each piece in the Drawing Tool creation.</p>
+
+      </section>
+      <section>
+        <h2># Discovery Log</h2>
+        <p>All notable changes to this project will be outlined here.</p>
+        <p><i>Discovery Log Guide</br>
+        [Artwork Name] – Date-created</br>
+        Medium</br>
+        Dimensions</br>
+        -	Summary of changes and discoveries.</i></p>
+
+        <p>## <b>[Axis] – 2020-16-09</b></br>
+        ## Computational Drawing, Archival Inkjet on Cotton Rag Paper</br>
+        ## 14” x 14”</br>
+        ### </br>
+        - Initial Drawing Tool Prototype sketch created. Axis is the home base for every browser refresh on the Drawing Tool.</p>
+
+        <p>## <b>[Encounter] – 2020-09-10</b></br>
+        ## Computational Drawing, Archival Inkjet on Cotton Rag Paper</br>
+        ## 17” x 17”</br>
+        ### </br>
+        - In a search to add complexity to the drawing tool, experimentation led to the creation of Encounter. It was noted that Translate and Rotate were the key factors in adding complexity to the original sketch.</p>
+
+        <p><b>## [Meridian] – 2020-10-10</b></br>
+        ## Computational Drawing, Archival Inkjet on Cotton Rag Paper</br>
+        ## 39” x 47”</br>
+        ### </br>
+        - Unhappy with the small size of Encounter, I set out to enlarge the work. Meridian was born out of this exploration.</p>
+
+        <p>## <b>[Discovery 1.0] – 2020-13-10</b></br>
+        ## Computational Drawing, Archival Inkjet on Cotton Rag Paper</br>
+        ## 14” x 14”</br>
+        ### </br>
+        - After the explorations with Encounter and Meridian, it became clear that Rotate and Translate were important factors to add into the drawing tool. These controls were added to the Tool, and from this came Discover 1.0.
+
+        <p>## <b>[Discovery 2.0] – 2020-13-10</b></br>
+        ## Computational Drawing, Archival Inkjet on Cotton Rag Paper</br>
+        ## 14” x 14”</br>
+        ### </br>
+        - Invert ability was added to the Drawing Tool. From this, Discovery 2.0 was born.</p>
+      <!-- </section> -->
     </section>
-    <section class="no-float">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id urna accumsan, dapibus felis et, sagittis sem. Praesent tempus, lacus non ultricies ultricies, est est volutpat lacus, et efficitur nisl purus in sem. Curabitur odio neque, porttitor eget lorem eget, malesuada accumsan elit. Nam vel ipsum lobortis, ornare elit tincidunt, volutpat augue. Donec commodo posuere auctor. Nulla tincidunt tincidunt tellus, vitae molestie urna ornare sed. Sed turpis augue, ultricies nec maximus vitae, interdum ultrices nisi. Phasellus venenatis magna nec leo accumsan, a bibendum felis posuere.</p>
-
-      <p>Aliquam vel scelerisque metus. Duis sodales fringilla orci nec accumsan. Mauris volutpat turpis a vehicula sollicitudin. Maecenas sit amet quam et nulla suscipit tristique nec quis velit. Curabitur arcu nibh, efficitur nec justo at, accumsan elementum sem. Morbi quis ante vitae leo ultrices congue. Vivamus sed ultrices eros. Sed feugiat dictum auctor. Fusce ultricies ligula at mattis dapibus. Morbi vehicula, est in tempor eleifend, tortor neque venenatis justo, in ornare nulla orci vel nulla. Aenean eu ante blandit, congue lorem ac, tincidunt mauris. Morbi ac ligula ligula. Etiam ante elit, efficitur eget est quis, condimentum ultricies nibh. Nam egestas auctor nisi, ac posuere lectus placerat non. Aliquam in quam tristique, congue urna sed, blandit purus.</p>
-    <section>
+    <section id="notes">
+    <h3>Endnotes</h3>
+      <ol>
+        <li>NEED TO ADD FORM & CODE citation!</li>
+        <li>NEED TO ADD FORM & CODE citation!</li>
+        <li>NEED TO ADD FORM & CODE citation!</li>
+        <li>NEED TO ADD FORM & CODE citation!</li>
+      </ol>
+  </section>
   </main>
-  <footer>
+      <!-- <div class="gridWork3" id=""><img src="img/app11.jpg" alt="app11" style="width:150px"></div> -->
+  </body>
+  <!-- <footer>
     <p>Jenna Murphy | MCAD MAGWD | Fall 2020</p>
-  </footer>
+  </footer> -->
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
