--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,600;0,800;0,900;1,100;1,200;1,300;1,600;1,800&display=swap" rel="stylesheet">
+
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -22,6 +25,7 @@
   <script src="js/vendor/p5.min.js" charset="utf-8"></script>
   <script src="js/vendor/p5.dom.js" charset="utf-8"></script>
   <script src="js/vendor/bootstrap.min.js" charset="utf-8"></script>
+
   <!-- <script src="js/sketch.js"charset="utf-8"></script> -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -40,6 +44,7 @@
       <div class="hero">
         <div class="hero-image">
           <div class="hero-text">
+            <!-- <h1>Discover a Space Between: An Exhibition</h1> -->
           </div>
         </div>
       </div>
@@ -53,62 +58,103 @@
         </div>
       </div>
     </div> -->
-    <main id="main" style="clear:both;">
-
-
+    <main id="main" style="">
       <section id="summary">
         <!-- <h3 class="background">Problem Statement</h3> -->
+      <div class="exhibitdate">
+        <h1>
+          Discover a Space Between: An Exhibition</br>
+          MCAD Main Building, Floor 2</br>
+          On View: 11.4-11.18.2020</br>
+        </h1>
+      </div>
+        <h2>Exhibition Summary</h2>
+        <p>Jenna Murphy, Minneapolis based artist, has been exploring what a contemporary drawing can be in today’s digital age. With a background in Intaglio Printmaking and Drawing, Jenna’s Computational Drawings aim to discover similar tactile qualities through computer code generated images using the software <a href="https://p5js.org/">p5.js</a>. The work aims to push the boundary of what a contemporary drawing can be, while endeavoring to blur the lines between the constructs of Fine and Digital Arts.</p>
 
-        <p>Jenna Murphy, Minneapolis based artist, has been exploring what a contemporary drawing can be in today’s digital age. With a background in Intaglio Printmaking and Drawing, Jenna’s Computational Drawings aim to discover similar tactile qualities through computer code generated images using the software p5.js. The work aims to push the boundary of what a contemporary drawing can be, while endeavoring to blur the lines between the constructs of Fine and Digital Arts.</p>
-
+        <img src="img/DrawingToolDetail.jpg" alt="Close-up Of Drawing Tool at Exhibition" style="width:100%;height:auto;">
         <!-- <img src="img/placeholder.jpg" alt="Exhibition Images" style="max-width: 100%";> -->
 
-        <p>The exhibition, Discover a Space Between, explores the intersection between physical and digital spaces, while showcasing the computational drawings of Jenna Murphy. The Drawing Tool, born out of the work, is an integral component of the exhibition. The Drawing Tool is a web-based digital companion piece that allows users to explore the beauty of computational drawings on their own. The Drawing Tool can be accessed online or in person, allowing for accessibility during times when physical presence may not be possible.</p>
+        <p>The exhibition, <i>Discover a Space Between</i>, explores the intersection between physical and digital spaces, while showcasing the computational drawings of Jenna Murphy. The <b><a href="drawing.html">Drawing Tool</a></b>, born out of the work, is an integral component of the exhibition. The <b><a href="drawing.html">Drawing Tool</a></b> is a web-based digital companion piece that allows users to explore the beauty of computational drawings on their own. The <b><a href="drawing.html">Drawing Tool</a></b> can be accessed online or in person, allowing for accessibility during times when physical presence may not be possible.</p>
 
-        <div class="slideshow-container" id="slide">
+        <h2>Featured Works</h2>
+
+        <div class="slideshow-container clearfix" id="slide">
 
           <!-- Full-width images with number and caption text -->
-          <div class="mySlides fade center">
+          <div class="mySlides fade center clearfix">
             <div class="numbertext" style="border: none">1 / 5</div>
-            <img src="img/axis copy.jpg" >
-            <div class="text" style="border: none"><p><i>Axis</i></p>
-        <p>Computational Drawing, Archival Inkjet on Cotton Rag Paper</p>
-        <p>14” x 14”</p>
-        </div>
+            <div class="slideimgdiv">
+              <img class="slideimg" src="img/axis copy.jpg">
+            </div>
+            <div class="text" style="border: none">
+              <p><i>Axis</i></p>
+              <p>Computational Drawing, Archival Inkjet on Cotton Rag Paper</p>
+              <p>14” x 14”</p>
+            </div>
           </div>
 
-          <div class="mySlides fade center">
+          <div class="mySlides fade center clearfix">
             <div class="numbertext" style="border: none">2 / 5</div>
-            <img src="img/app9 copy.jpg" >
-            <div class="text" style="border: none">Encounter</div>
+            <div class="slideimgdiv">
+              <img class="slideimg" src="img/app9 copy.jpg" >
+            </div>
+            <div class="text" style="border: none">
+              <p><i>Encounter</i></p>
+              <p>Computational Drawing, Archival Inkjet on Cotton Rag Paper</p>
+              <p>17” x 17”</p>
+            </div>
           </div>
 
-          <div class="mySlides fade center">
+          <div class="mySlides fade center clearfix">
             <div class="numbertext" style="border: none">3 / 5</div>
-            <img src="img/app11.jpg" >
-            <div class="text" style="border: none">Meridian</div>
+            <div class="slideimgdiv">
+              <img class="slideimg" src="img/app11.jpg" >
+            </div>
+            <div class="text" style="border: none">
+              <p><i>Meridian</i></p>
+              <p>Computational Drawing, Archival Inkjet on Cotton Rag Paper</p>
+              <p>39” x 47”</p>
+            </div>
           </div>
 
-          <div class="mySlides fade center">
+          <div class="mySlides fade center clearfix">
             <div class="numbertext" style="border: none">4 / 5</div>
-            <img src="img/drawingtool2.jpg" >
-            <div class="text" style="border: none">Discover 1.0</div>
+            <div class="slideimgdiv">
+              <img class="slideimg" src="img/drawingtool2.jpg" >
+            </div>
+            <div class="text" style="border: none">
+              <p><i>Discover 1.0</i></p>
+              <p>Computational Drawing, Archival Inkjet on Cotton Rag Paper</p>
+              <p>39” x 47”</p>
+            </div>
           </div>
 
-          <div class="mySlides fade center">
+          <div class="mySlides fade center clearfix">
             <div class="numbertext" style="color:white; border: none">4 / 5</div>
-            <img src="img/index.jpg" >
-            <div class="text" style="border: none">Discover 2.0</div>
+            <div class="slideimgdiv">
+              <img class="slideimg" src="img/index.jpg" >
+            </div>
+            <div class="text" style="border: none">
+              <p><i>Discover 2.0</i></p>
+              <p>Computational Drawing, Archival Inkjet on Cotton Rag Paper</p>
+              <p>39” x 47”</p>
+            </div>
           </div>
           <!-- Next and previous buttons -->
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <a class="prev clearfix" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next clearfix" onclick="plusSlides(1)">&#10095;</a>
           </div>
 
-        <p>The physical pieces presented in Discover a Space Between are works created during the development of the Drawing Tool. Each piece builds off the last, while exploring ways to make the tool itself more complex and engaging. The changes and order of the works are outlined in the Change Log found on the About the Work page.</p>
 
-        <p>Take a moment to read about each piece, and then explore the Drawing Tool yourself. The hope is that you may find many beautiful discoveries of your own.</p>
+        <p class="clearfix">The physical pieces presented in <i>Discover a Space Between</i> are works created during the development of the <b><a href="drawing.html">Drawing Tool</a></b>. Each piece builds off the last, while exploring ways to make the tool itself more complex and engaging. The changes and order of the works are outlined in the Discovery Log found on the <b><a href="work.html">About the Work</a></b> page.</p>
+
+        <p>Take a moment to read about each piece, and then explore the <b><a href="drawing.html">Drawing Tool</a></b> yourself. The hope is that you may find many beautiful discoveries of your own.</p>
       </section>
+      <footer id="footertag">
+        <p>&#169;	Jenna Murphy</p>
+      </footer>
+    </main>
+
 
     <!-- <div class="grid-spacer">    </div>
       <div class="gridHome2" id="summary">
@@ -139,14 +185,8 @@
   <span class="dot" onclick="currentSlide(3)"></span>
 </div> -->
 
-  </main>
-  <!-- <footer>
-    <p>Jenna Murphy | MCAD MAGWD | Fall 2020</p>
-  </footer> -->
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+
   <!-- <script>
   /* Set the width of the side navigation to 250px */
 function openNav() {
@@ -159,6 +199,10 @@ function closeNav() {
 }
   </script> -->
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
