--- a/work.html
+++ b/work.html
@@ -11,7 +11,8 @@
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,600;0,800;0,900;1,100;1,200;1,300;1,600;1,800&display=swap" rel="stylesheet">
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -108,7 +109,11 @@
   </section>
   </main>
       <!-- <div class="gridWork3" id=""><img src="img/app11.jpg" alt="app11" style="width:150px"></div> -->
+
   </body>
+  <!-- <footer>
+    <p>Jenna Murphy |  Minneapolis College of Art and Design | Master of Arts in Graphic and Web Design  |  Capstone Fall 2020</p>
+  </footer> -->
   <!-- <footer>
     <p>Jenna Murphy | MCAD MAGWD | Fall 2020</p>
   </footer> -->
