endnotes, bib, button fixes

--- a/work.html
+++ b/work.html
@@ -101,16 +101,30 @@
     <section id="notes">
     <h3>Endnotes</h3>
       <ol>
-        <li>NEED TO ADD FORM & CODE citation!</li>
-        <li>NEED TO ADD FORM & CODE citation!</li>
-        <li>NEED TO ADD FORM & CODE citation!</li>
-        <li>NEED TO ADD FORM & CODE citation!</li>
+        <li>Casey Reas, Chandler McWilliams, and LUST, <i>Form + Code in Design, Art, and Architecture.</i> (New York: Princeton Architectural Press, 2010), 25.</li>
+        <li>Ibid.</li>
+        <li>Ibid.</li>
+        <li>Ibid.</li>
       </ol>
   </section>
+
+  <section id="bib">
+  <h3>Bibliography</h3>
+    <ol>
+      <li>
+Reas, Casey, Chandler McWilliams, and LUST. Form + Code in Design, Art, and
+
+Architecture. New York: Princeton Architectural Press, 2010.</li>
+    </ol>
+</section>
+
+  <footer id="footertag">
+    <p>&#169;	Jenna Murphy</p>
+  </footer>
   </main>
       <!-- <div class="gridWork3" id=""><img src="img/app11.jpg" alt="app11" style="width:150px"></div> -->
 
-  </body>
+
   <!-- <footer>
     <p>Jenna Murphy |  Minneapolis College of Art and Design | Master of Arts in Graphic and Web Design  |  Capstone Fall 2020</p>
   </footer> -->
